[#14785] fix failing pipeline (List.of())